syntax = "proto3";

import "google/protobuf/empty.proto";
import "Trace.proto";
import "Command.proto";

option java_multiple_files = true;
option java_package = "com.navercorp.pinpoint.grpc.trace";
option java_outer_classname = "PinpointProto";
//option objc_class_prefix = "PIN";

package v1;

service Agent {
    rpc SendAgentInfo (stream PAgentInfo) returns (google.protobuf.Empty) {
    }
    rpc RequestAgentInfo (PAgentInfo) returns (PResult) {
    }
    rpc RequestSqlMetaData (PSqlMetaData) returns (PResult) {
    }
    rpc RequestApiMetaData (PApiMetaData) returns (PResult) {
    }
    rpc RequestStringMetaData (PStringMetaData) returns (PResult) {
    }
}

service Stat {
    rpc SendAgentStat (stream PAgentStat) returns (google.protobuf.Empty) {
    }
    rpc SendAgentStatBatch (stream PAgentStatBatch) returns (google.protobuf.Empty) {
    }
}

service KeepAlive {
    rpc ServerKeepAlive (stream PPing) returns (stream PPing) {
    }
    rpc ClientKeepAlive (stream PPing) returns (stream PPing) {
    }
}

message PPing {
    int32 id = 1;
    // 0: StateCodeVersion, 1: StateCode
    bytes state = 2;
}

message PAgentInfo {
    string hostname = 1;
    string ip = 2;
    string ports = 3;
    string agentId = 4;
    string applicationName = 5;
    int32 serviceType = 6;
    int32 pid = 7;
    string agentVersion = 8;
    string vmVersion = 9;
    int64 startTimestamp = 10;
    int64 endTimestamp = 11;
    int32 endStatus = 12;
    PServerMetaData serverMetaData = 20;
    PJvmInfo jvmInfo = 30;
    bool container = 40;
}

message PServerMetaData {
    string serverInfo = 1;
    repeated string vmArgs = 2;
    repeated PServiceInfo serviceInfos = 10;
}

message PServiceInfo {
    string serviceName = 1;
    repeated string serviceLibs = 2;
}

message PJvmInfo {
    int32 version = 1;
    string vmVersion = 2;
    PJvmGcType gcType = 3;
}

message PJvmGcType {
}

message PAgentStat {
    string agentId = 1;
    int64 startTimestamp = 2;
    int64 timestamp = 3;
    int64 collectInterval = 4;
    PJvmGc gc = 10;
    PCpuLoad cpuLoad = 20;
    PTransaction transaction = 30;
    PActiveTrace activeTrace = 40;
    PDataSourceList dataSourceList = 50;
    PResponseTime responseTime = 60;
    PDeadlock deadlock = 70;
    PFileDescriptor fileDescriptor = 80;
    PDirectBuffer directBuffer = 90;
    string metadata = 200;
}

message PAgentStatBatch {
    string agentId = 1;
    int64 startTimestamp = 2;
    repeated PAgentStat agentStats = 10;
}

message PDataSource {
    int32 id = 1;
    int32 serviceTypeCode = 2;
    string databaseName = 3;
    string url = 4;
    int32 activeConnectionSize = 5;
    int32 maxConnectionSize = 6;
}

message PDataSourceList {
    repeated PDataSource dataSourceList = 1;
}

message PFileDescriptor {
    int64 openFileDescriptorCount = 1;
}

message PJvmGc {
    PJvmGcType type = 1;
    int64 jvmMemoryHeapUsed = 2;
    int64 jvmMemoryHeapMax = 3;
    int64 jvmMemoryNonHeapUsed = 4;
    int64 jvmMemoryNonHeapMax = 5;
    int64 jvmGcOldCount = 6;
    int64 jvmGcOldTime = 7;
    PJvmGcDetailed jvmGcDetailed = 8;
}

message PJvmGcDetailed {
    int64 jvmGcNewCount = 1;
    int64 jvmGcNewTime = 2;
    double jvmPoolCodeCacheUsed = 3;
    double jvmPoolNewGenUsed = 4;
    double jvmPoolOldGenUsed = 5;
    double jvmPoolSurvivorSpaceUsed = 6;
    double jvmPoolPermGenUsed = 7;
    double jvmPoolMetaspaceUsed = 8;
}

message PCpuLoad {
    double jvmCpuLoad = 1;
    double systemCpuLoad = 2;
}

message PTransaction {
    int64 sampledNewCount = 2;
    int64 sampledContinuationCount = 3;
    int64 unsampledNewCount = 4;
    int64 unsampledContinuationCount = 5;
}

message PActiveTraceHistogram {
    int32 version = 1;
    int32 histogramSchemaType = 2;
    repeated int32 activeTraceCount = 3;
}

message PActiveTrace {
    PActiveTraceHistogram histogram = 1;
}

message PResponseTime {
    int64 avg = 1;
    int64 max = 2;
}

message PDeadlock {
    int32 deadlockedThreadCount = 1;
    repeated PThreadDump deadlockedThreadList = 2;
}

message PDirectBuffer {
    int64 directCount = 1;
    int64 directMemoryUsed = 2;
    int64 mappedCount = 3;
    int64 mappedMemoryUsed = 4;
}